2025-11-17T01:04:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19415151972 # 1310
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
* notice: last 14d: unq all: 10 22
* notice: prev accum: outdated-unq outdated-all / unq all: 1080 3137 / 1089 3146
* notice: next accum: outdated-unq outdated-all / unq all: 1081 3138 / 1091 3160
* notice: prev exec diff / last date diff / accum: unq all: +2 +14 -0 -0 / +2 +14 -0 -0 / 2 14
* notice: removed / changed dates: [2025-11-02] / [2025-11-16]

2025-11-16T01:08:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19398180629 # 1308
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-16
* notice: last 14d: unq all: 9 9
* notice: prev accum: outdated-unq outdated-all / unq all: 1080 3137 / 1088 3145
* notice: next accum: outdated-unq outdated-all / unq all: 1080 3137 / 1089 3146
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-15]

2025-11-15T01:02:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19381890994 # 1306
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
* notice: last 14d: unq all: 8 8
* notice: prev accum: outdated-unq outdated-all / unq all: 1080 3137 / 1087 3144
* notice: next accum: outdated-unq outdated-all / unq all: 1080 3137 / 1088 3145
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-14]

2025-11-14T01:03:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19350841601 # 1304