@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-17T01:04:59Z",
+  "timestamp" : "2025-11-18T01:03:26Z",
   "count_outdated" : 3138,
   "uniques_outdated" : 1081,
-  "count" : 3160,
-  "uniques" : 1091,
+  "count" : 3161,
+  "uniques" : 1092,
   "views" : [
     {
       "timestamp": "2025-11-07T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-11-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
