@@ -1,6 +1,6 @@
 {
-  "count": 22,
-  "uniques": 10,
+  "count": 23,
+  "uniques": 11,
   "views": [
     {
       "timestamp": "2025-11-07T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2025-11-16T00:00:00Z",
       "count": 14,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-11-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
