@@ -1,3 +1,12 @@
+2025-11-18T01:03:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19450180432 # 1312
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-18
+* notice: last 14d: unq all: 11 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 1081 3138 / 1091 3160
+* notice: next accum: outdated-unq outdated-all / unq all: 1081 3138 / 1092 3161
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-11-17]
+
 2025-11-17T01:04:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19415151972 # 1310
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
